hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/hint_wellformed.php.exp
File "hint_wellformed.php", line 6, characters 15-20:
`?mixed` is a redundant typehint - just use `mixed` (Typing[4068])
