hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/hint_wellformed.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`(?mixed $x) ==> {}`;
}
